<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_pop_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_females_only"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@drawable/btn_list_item_bg"
        android:clickable="true">

        <TextView
            android:id="@+id/tv_females_only"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/females_only"
            android:textColor="#353535"
            android:textSize="16sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="#d9d9d9" />

    <RelativeLayout
        android:id="@+id/rl_males_only"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@drawable/btn_list_item_bg"
        android:clickable="true">

        <TextView
            android:id="@+id/tv_males_only"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/males_only"
            android:textColor="#353535"
            android:textSize="16sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="#d9d9d9" />

    <RelativeLayout
        android:id="@+id/rl_view_all"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@drawable/btn_list_item_bg"
        android:clickable="true">

        <TextView
            android:id="@+id/tv_view_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/view_all"
            android:textColor="#353535"
            android:textSize="16sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="#d9d9d9" />


    <RelativeLayout
        android:id="@+id/rl_greetings"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@drawable/btn_list_item_bg"
        android:clickable="true">

        <TextView
            android:id="@+id/tv_greetings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/greetings"
            android:textColor="#353535"
            android:textSize="16sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="#d9d9d9" />

    <RelativeLayout
        android:id="@+id/rl_clear_location"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@drawable/btn_list_item_bg"
        android:clickable="true">

        <TextView
            android:id="@+id/tv_clear_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/clear_location"
            android:textColor="#353535"
            android:textSize="16sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="#d9d9d9" />

    <RelativeLayout
        android:id="@+id/rl_cancel"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@drawable/btn_list_item_bg"
        android:clickable="true">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/cancel"
            android:textColor="#353535"
            android:textSize="16sp" />
    </RelativeLayout>
</LinearLayout>