<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_common_bg"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar_height">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/top_bar_back_width"
            android:layout_height="@dimen/top_bar_back_height"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:onClick="back"
            android:scaleType="centerInside"
            android:src="@drawable/btn_top_back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:text="@string/modify_password"
            android:textColor="@color/common_top_title"
            android:textSize="@dimen/top_bar_title_text_size" />

        <TextView
            android:id="@+id/tv_complete"
            android:layout_width="@dimen/save_btn_width"
            android:layout_height="@dimen/save_btn_height"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/save_btn_margin_right"
            android:background="@drawable/bg_save_btn"
            android:gravity="center"
            android:text="@string/complete"
            android:textColor="#fff"
            android:textSize="@dimen/save_btn_text_size" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/modify_password_hint"
            android:textColor="@color/common_hint_grey"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/wechat_id"
            android:textColor="@color/common_hint_grey"
            android:textSize="@dimen/common_item_text_size" />

        <EditText
            android:id="@+id/et_wechat_id"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="50dp"
            android:background="@null"
            android:enabled="false"
            android:paddingLeft="95dp"
            android:singleLine="true"
            android:textColor="@color/common_hint_grey"
            android:textColorHint="@color/common_hint_grey"
            android:textSize="@dimen/common_item_text_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@color/divider_grey" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/old_password"
            android:textColor="#353535"
            android:textSize="@dimen/common_item_text_size" />

        <EditText
            android:id="@+id/et_old_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="50dp"
            android:background="@null"
            android:hint="@string/old_password_hint"
            android:inputType="textPassword"
            android:paddingLeft="95dp"
            android:singleLine="true"
            android:textColor="#353535"
            android:textColorHint="@color/common_hint_grey"
            android:textSize="@dimen/common_item_text_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="95dp"
            android:layout_marginRight="12dp"
            android:background="@color/divider_grey" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/new_password"
            android:textColor="#353535"
            android:textSize="@dimen/common_item_text_size" />

        <EditText
            android:id="@+id/et_new_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="50dp"
            android:background="@null"
            android:hint="@string/new_password_hint"
            android:inputType="textPassword"
            android:paddingLeft="95dp"
            android:singleLine="true"
            android:textColor="#353535"
            android:textColorHint="@color/common_hint_grey"
            android:textSize="@dimen/common_item_text_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="95dp"
            android:layout_marginRight="12dp"
            android:background="@color/divider_grey" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/confirm_password"
            android:textColor="#353535"
            android:textSize="@dimen/common_item_text_size" />

        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="50dp"
            android:background="@null"
            android:hint="@string/confirm_password_hint"
            android:inputType="textPassword"
            android:paddingLeft="95dp"
            android:singleLine="true"
            android:textColor="#353535"
            android:textColorHint="@color/common_hint_grey"
            android:textSize="@dimen/common_item_text_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="95dp"
            android:layout_marginRight="12dp"
            android:background="@color/divider_grey" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/modify_password_rule"
            android:textColor="#353535"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="忘记原密码？"
            android:textColor="@color/navy_blue"
            android:textSize="14sp" />
    </RelativeLayout>
</LinearLayout>