<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/wechat_common_bg"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar_height"
        android:background="@color/common_top_bar">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/top_back_width"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:onClick="back"
            android:scaleType="centerInside"
            android:src="@drawable/btn_top_back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/iv_back"
            android:text="@string/set_gender"
            android:textColor="@color/common_top_title"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_save"
            android:layout_width="@dimen/save_btn_width"
            android:layout_height="@dimen/save_btn_height"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/save_btn_margin_right"
            android:background="@drawable/bg_save_btn"
            android:enabled="true"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="#fff"
            android:textSize="@dimen/save_btn_text_size" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_male"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/btn_list_item_bg"
        android:clickable="true">

        <TextView
            android:id="@+id/tv_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/sex_male"
            android:textColor="#353535"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/iv_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:src="@mipmap/icon_correct"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            android:background="@color/common_divider_grey" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_female"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/btn_list_item_bg"
        android:clickable="true">

        <TextView
            android:id="@+id/tv_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/sex_female"
            android:textColor="#353535"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/iv_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:src="@mipmap/icon_correct"
            android:visibility="gone" />
    </RelativeLayout>

</LinearLayout>